--- a/pages/apps/contoso/styles/index.module.css
+++ b/pages/apps/contoso/styles/index.module.css
@@ -1,5 +1,6 @@
 .container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-gap: 15px;
+    place-items: center;
 }
