--- a/components/Card/ChartCard/chart-card.module.css
+++ b/components/Card/ChartCard/chart-card.module.css
@@ -5,8 +5,11 @@
     align-items: center;
     justify-content: center;
     width: min-content;
+    min-width: 350px;
     box-shadow: 0 2px 4px var(--card-shadow);
     padding: 15px 20px;
+    position: relative;
+    overflow: hidden;
 
     .header {
         display: flex;
