--- a/pages/apps/contoso/styles/index.module.css
+++ b/pages/apps/contoso/styles/index.module.css
@@ -1,6 +1,5 @@
 .container {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    grid-gap: 15px;
-    place-items: center;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
