--- a/components/Empty/main-empty.module.css
+++ b/components/Empty/main-empty.module.css
@@ -17,10 +17,12 @@
         .primaryHeader {
             margin-top: 15px;
             margin-bottom: 8px;
+            color: var(--empty-header-color)
         }
 
         p {
             line-height: 1.8;
+            color: var(--empty-description-color)
         }
     }
 
